dirndl - cleanup